<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HandoutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/btn_back"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toTopOf="@+id/guideline40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline40" />

        <EditText
            android:id="@+id/editText22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="@integer/input_length"
            android:inputType="numberDecimal"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline42"
            app:layout_constraintEnd_toStartOf="@+id/guideline38"
            app:layout_constraintStart_toStartOf="@+id/guideline38"
            app:layout_constraintTop_toTopOf="@+id/guideline42" />

        <EditText
            android:id="@+id/editText17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="@integer/input_length"
            android:inputType="numberDecimal"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline36"
            app:layout_constraintEnd_toStartOf="@+id/guideline38"
            app:layout_constraintStart_toStartOf="@+id/guideline38"
            app:layout_constraintTop_toTopOf="@+id/guideline36"
            tools:text="@string/hint_flow1" />

        <EditText
            android:id="@+id/editText18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="@integer/input_length"
            android:inputType="textPersonName"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline46"
            app:layout_constraintEnd_toStartOf="@+id/guideline38"
            app:layout_constraintStart_toStartOf="@+id/guideline38"
            app:layout_constraintTop_toTopOf="@+id/guideline46" />

        <EditText
            android:id="@+id/editText19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="@integer/input_length"
            android:inputType="textPersonName"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline45"
            app:layout_constraintEnd_toStartOf="@+id/guideline38"
            app:layout_constraintStart_toStartOf="@+id/guideline38"
            app:layout_constraintTop_toTopOf="@+id/guideline45" />

        <EditText
            android:id="@+id/editText20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="@integer/input_length"
            android:inputType="numberDecimal"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline44"
            app:layout_constraintEnd_toStartOf="@+id/guideline38"
            app:layout_constraintStart_toStartOf="@+id/guideline38"
            app:layout_constraintTop_toTopOf="@+id/guideline44" />

        <EditText
            android:id="@+id/editText21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="@integer/input_length"
            android:inputType="numberDecimal"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline43"
            app:layout_constraintEnd_toStartOf="@+id/guideline38"
            app:layout_constraintStart_toStartOf="@+id/guideline38"
            app:layout_constraintTop_toTopOf="@+id/guideline43" />

        <EditText
            android:id="@+id/editText23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="@integer/input_length"
            android:inputType="numberDecimal"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline41"
            app:layout_constraintEnd_toStartOf="@+id/guideline38"
            app:layout_constraintStart_toStartOf="@+id/guideline38"
            app:layout_constraintTop_toTopOf="@+id/guideline41" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_newPump"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline46"
            app:layout_constraintEnd_toStartOf="@+id/guideline37"
            app:layout_constraintStart_toStartOf="@+id/guideline37"
            app:layout_constraintTop_toTopOf="@+id/guideline46" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_oldPump"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline45"
            app:layout_constraintEnd_toStartOf="@+id/guideline37"
            app:layout_constraintStart_toStartOf="@+id/guideline37"
            app:layout_constraintTop_toTopOf="@+id/guideline45" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record2"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline44"
            app:layout_constraintEnd_toStartOf="@+id/guideline37"
            app:layout_constraintStart_toStartOf="@+id/guideline37"
            app:layout_constraintTop_toTopOf="@+id/guideline44" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record1"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline43"
            app:layout_constraintEnd_toStartOf="@+id/guideline37"
            app:layout_constraintStart_toStartOf="@+id/guideline37"
            app:layout_constraintTop_toTopOf="@+id/guideline43" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record3"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline42"
            app:layout_constraintEnd_toStartOf="@+id/guideline37"
            app:layout_constraintStart_toStartOf="@+id/guideline37"
            app:layout_constraintTop_toTopOf="@+id/guideline42" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record4"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline41"
            app:layout_constraintEnd_toStartOf="@+id/guideline37"
            app:layout_constraintStart_toStartOf="@+id/guideline37"
            app:layout_constraintTop_toTopOf="@+id/guideline41" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_level"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline36"
            app:layout_constraintEnd_toStartOf="@+id/guideline37"
            app:layout_constraintStart_toStartOf="@+id/guideline37"
            app:layout_constraintTop_toTopOf="@+id/guideline36" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.18" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.27" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.71" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.07" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.78" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.68" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline43"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.58" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.48" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.38" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline46"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.28" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>