<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline16">

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_flow1"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline34"
            app:layout_constraintEnd_toStartOf="@+id/guideline16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline34" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_flow2"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline32"
            app:layout_constraintEnd_toStartOf="@+id/guideline16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline32" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_flow1"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline33"
            app:layout_constraintEnd_toStartOf="@+id/guideline16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline33" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_flow2"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline31"
            app:layout_constraintEnd_toStartOf="@+id/guideline16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline31" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_sumFlow"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline30"
            app:layout_constraintEnd_toStartOf="@+id/guideline16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline30" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/out_pressure"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline29"
            app:layout_constraintEnd_toStartOf="@+id/guideline16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline29" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_level"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline28"
            app:layout_constraintEnd_toStartOf="@+id/guideline16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline28" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_index2"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline27"
            app:layout_constraintEnd_toStartOf="@+id/guideline16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline27" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_index4"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline25"
            app:layout_constraintEnd_toStartOf="@+id/guideline16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline25" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_watt2"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline26"
            app:layout_constraintEnd_toStartOf="@+id/guideline16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline26" />

        <TextView
            android:id="@+id/textView40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_watt4"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline24"
            app:layout_constraintEnd_toStartOf="@+id/guideline16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline24" />

        <TextView
            android:id="@+id/textView41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_power"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline35"
            app:layout_constraintEnd_toStartOf="@+id/guideline16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline35" />

        <TextView
            android:id="@+id/textView42"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline34"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline16"
            app:layout_constraintTop_toTopOf="@+id/guideline34" />

        <TextView
            android:id="@+id/textView43"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline33"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline16"
            app:layout_constraintTop_toTopOf="@+id/guideline33" />

        <TextView
            android:id="@+id/textView44"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline16"
            app:layout_constraintTop_toTopOf="@+id/guideline32" />

        <TextView
            android:id="@+id/textView45"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline31"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline16"
            app:layout_constraintTop_toTopOf="@+id/guideline31" />

        <TextView
            android:id="@+id/textView46"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline16"
            app:layout_constraintTop_toTopOf="@+id/guideline30" />

        <TextView
            android:id="@+id/textView47"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline29"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline16"
            app:layout_constraintTop_toTopOf="@+id/guideline29" />

        <TextView
            android:id="@+id/textView48"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline28"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline16"
            app:layout_constraintTop_toTopOf="@+id/guideline28" />

        <TextView
            android:id="@+id/textView49"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline27"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline16"
            app:layout_constraintTop_toTopOf="@+id/guideline27" />

        <TextView
            android:id="@+id/textView50"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline26"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline16"
            app:layout_constraintTop_toTopOf="@+id/guideline26" />

        <TextView
            android:id="@+id/textView51"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline16"
            app:layout_constraintTop_toTopOf="@+id/guideline25" />

        <TextView
            android:id="@+id/textView52"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline16"
            app:layout_constraintTop_toTopOf="@+id/guideline24" />

        <TextView
            android:id="@+id/textView53"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline35"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline16"
            app:layout_constraintTop_toTopOf="@+id/guideline35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.78" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.71" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.64" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.57" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.43" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.36" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.29" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.22" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.92" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/btn_back"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toTopOf="@+id/guideline34"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>